--- a/test.ipynb
+++ b/test.ipynb
@@ -1,12 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Interface\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -25,6 +37,307 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(filename='uml_actors.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: %%file is a cell magic, but the cell body is empty."
+     ]
+    }
+   ],
+   "source": [
+    "%%file test.java"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem 2. -----------------\r\n",
+      "MallardDuck quack..\r\n",
+      "WildTurkey gobble..\r\n",
+      "WildTurkey flying a short distance\r\n",
+      "WildTurkey gobble..\r\n",
+      "----------------------------\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac test.java -d out\n",
+    "!java -cp out/ com.ex.ood.test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load test.java\n",
+    "/* ASSISTANT CODE\n",
+    " *\n",
+    " * Problem 2. Fill in the blanks of the following code fragment. \n",
+    " * When you run this code you get the following:\n",
+    " * \n",
+    " * Problem 2. --------------------\n",
+    " * MallardDuck quack..\n",
+    " * WildTurkey gobble..\n",
+    " * WildTurkey flying a short distance\n",
+    " * WildTurkey gobble..\n",
+    " * -------------------------------\n",
+    " */\n",
+    "\n",
+    "package com.ex.ood;\n",
+    "\n",
+    "interface Duck {\n",
+    "\tpublic void quack();\n",
+    "\tpublic void fly();\n",
+    "}\n",
+    "\n",
+    "class MallardDuck implements Duck {\n",
+    "\t@Override\n",
+    "\tpublic void quack() {\n",
+    "\t\tSystem.out.println(\"MallardDuck quack..\");\n",
+    "\t}\n",
+    "\t@Override\n",
+    "\tpublic void fly() {\n",
+    "\t\tSystem.out.println(\"MallardDuck flying\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "interface Turkey {\n",
+    "\tpublic void gobble();\n",
+    "\tpublic void fly();\n",
+    "}\n",
+    "\n",
+    "class WildTurkey implements Turkey {\n",
+    "\t@Override\n",
+    "\tpublic void fly() {\n",
+    "\t\tSystem.out.println(\"WildTurkey flying a short distance\");\n",
+    "\t}\n",
+    "\t@Override\n",
+    "\tpublic void gobble() {\n",
+    "\t\tSystem.out.println(\"WildTurkey gobble..\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "class TurkeyAdapter implements Duck {\n",
+    "\tTurkey turkey;\n",
+    "\tpublic TurkeyAdapter(Turkey turkey) {\n",
+    "\t\tthis.turkey=turkey;\n",
+    "\t}\n",
+    "\t@Override\n",
+    "\tpublic void fly() {\n",
+    "\t\tturkey.fly();\n",
+    "\t}\n",
+    "\t@Override\n",
+    "\tpublic void quack() {\n",
+    "\t\tturkey.gobble();\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "public class test {\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tSystem.out.println(\"Problem 2. -----------------\");\n",
+    "        MallardDuck duck = new MallardDuck();\n",
+    "        duck.quack();\n",
+    "\n",
+    "        WildTurkey turkey = new WildTurkey();\n",
+    "        turkey.gobble();\n",
+    "        turkey.fly();\n",
+    "\n",
+    "        Duck turkeyAdapter = new TurkeyAdapter(turkey);\n",
+    "        turkeyAdapter.quack();\n",
+    "\t\tSystem.out.println(\"----------------------------\");\n",
+    "\t}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installed plantuml_magics.py. To use it, type:\n",
+      "  %load_ext plantuml_magics\n"
+     ]
+    }
+   ],
+   "source": [
+    "%install_ext https://raw.githubusercontent.com/sberke/ipython-plantuml/master/plantuml_magics.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The plantuml_magics extension is already loaded. To reload it, use:\n",
+      "  %reload_ext plantuml_magics\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext plantuml_magics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./plantuml.jar']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "glob.glob(r'./*.jar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"155px\" style=\"width:241px;height:155px;\" version=\"1.1\" viewBox=\"0 0 241 155\" width=\"241px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><line style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 5.0,5.0;\" x1=\"33\" x2=\"33\" y1=\"38.4883\" y2=\"117.1094\"/><line style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 5.0,5.0;\" x1=\"214.5\" x2=\"214.5\" y1=\"38.4883\" y2=\"117.1094\"/><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"30.4883\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"47\" x=\"8\" y=\"3\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"33\" x=\"15\" y=\"23.5352\">Alice</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"30.4883\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"47\" x=\"8\" y=\"116.1094\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"33\" x=\"15\" y=\"136.6445\">Alice</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"30.4883\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"40\" x=\"192.5\" y=\"3\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"26\" x=\"199.5\" y=\"23.5352\">Bob</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"30.4883\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"40\" x=\"192.5\" y=\"116.1094\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"26\" x=\"199.5\" y=\"136.6445\">Bob</text><polygon fill=\"#A80036\" points=\"202.5,65.4883,212.5,69.4883,202.5,73.4883,206.5,69.4883\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.0;\" x1=\"33.5\" x2=\"208.5\" y1=\"69.4883\" y2=\"69.4883\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"13\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"147\" x=\"40.5\" y=\"65.0566\">Authentication Request</text><polygon fill=\"#A80036\" points=\"44.5,94.7988,34.5,98.7988,44.5,102.7988,40.5,98.7988\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><line style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 2.0,2.0;\" x1=\"38.5\" x2=\"213.5\" y1=\"98.7988\" y2=\"98.7988\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"13\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"157\" x=\"50.5\" y=\"94.3672\">Authentication Response</text></g></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%plantuml figure1\n",
+    "\n",
+    "@startuml\n",
+    "Alice -> Bob: Authentication Request\n",
+    "Bob --> Alice: Authentication Response\n",
+    "@enduml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "download plantuml.jar\n",
+    "install graphviz\n",
+    "export GRAPHVIZ_DOT=/opt/local/bin/dot\n",
+    "export LANG = ja_JP.UTF-8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"582.0896px\" style=\"width:802px;height:582px;background:#000000;\" version=\"1.1\" viewBox=\"0 0 802 582\" width=\"802.9851px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"623.8806\" x=\"0\" y=\"40.4035\">Dot Executable: /usr/bin/dot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"400\" x=\"0\" y=\"89.6222\">File does not exist</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"800\" x=\"0\" y=\"138.841\">Cannot find Graphviz. You should try</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"14.9254\" y=\"188.0597\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"220.8955\" x=\"0\" y=\"237.2785\">@startuml</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"155.2239\" x=\"0\" y=\"286.4972\">testdot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"197.0149\" x=\"0\" y=\"335.716\">@enduml</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"14.9254\" y=\"384.9347\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"44.7761\" x=\"14.9254\" y=\"434.1535\">or</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"14.9254\" y=\"483.3722\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"656.7164\" x=\"0\" y=\"532.591\">java -jar plantuml.jar -testdot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"41.791\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"14.9254\" y=\"581.8097\"/></g></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%plantuml figure1\n",
+    "@startuml\n",
+    "scale 800 width\n",
+    "Class01 <|-- Class02\n",
+    "Class03 *-- Class04\n",
+    "Class05 o-- Class06\n",
+    "Class07 .. Class08\n",
+    "Class09 -- Class10\n",
+    "Class11 <|.. Class12\n",
+    "Class13 --> Class14\n",
+    "Class15 ..> Class16\n",
+    "Class17 ..|> Class18\n",
+    "Class19 <--* Class20\n",
+    "@enduml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 단순\n",
+    "* Simple SimDuck\n",
+    "* 오리를 날게 fly()"
    ]
   }
  ],
